1、调整场景用例引用路径